model Bonus {
  id        String        @id @default(uuid())
  staffId   String        @map("staff_id")
  workType  String        @map("work_type")
  amount    Int           @default(0)
  status    PaymentStatus @default(pending)
  note      String?
  month     String
  createdAt DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)
  staff     StaffInfo     @relation(fields: [staffId], references: [id], onDelete: Cascade)
  date      DateTime      @default(now()) @map("date") @db.Date

  @@index([staffId])
  @@index([month])
  @@index([staffId, month, status])
  @@index([status, date, staffId])
  @@map("bonuses")
}

model RoleTaxDeductionRate {
  id            String    @id @default(uuid())
  roleType      StaffRole @map("role_type")
  ratePercent   Decimal   @default(0) @map("rate_percent") @db.Decimal(5, 2)
  effectiveFrom DateTime  @map("effective_from") @db.Date
  createdAt     DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@unique([roleType, effectiveFrom])
  @@index([roleType, effectiveFrom])
  @@map("role_tax_deduction_rates")
}

model StaffTaxDeductionOverride {
  id            String    @id @default(uuid())
  staffId       String    @map("staff_id")
  roleType      StaffRole @map("role_type")
  ratePercent   Decimal   @default(0) @map("rate_percent") @db.Decimal(5, 2)
  effectiveFrom DateTime  @map("effective_from") @db.Date
  createdAt     DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)
  staff         StaffInfo @relation(fields: [staffId], references: [id], onDelete: Cascade)

  @@unique([staffId, roleType, effectiveFrom])
  @@index([staffId, roleType, effectiveFrom])
  @@index([roleType, effectiveFrom])
  @@map("staff_tax_deduction_overrides")
}

model WalletTransactionsHistory {
  id                            String                           @id @default(uuid())
  studentId                     String                           @map("student_id")
  type                          WalletTransactionType
  amount                        Int                              @default(0)
  note                          String?
  date                          DateTime                         @default(now()) @db.Date
  createdAt                     DateTime                         @default(now()) @map("created_at") @db.Timestamptz(6)
  studentTransactionAttendances Attendance?
  student                       StudentInfo                      @relation(fields: [studentId], references: [id], onDelete: Cascade)
  sepayWalletOrder              StudentWalletSepayOrder?
  directTopUpRequest            StudentWalletDirectTopUpRequest?

  @@index([studentId])
  @@index([studentId, createdAt])
  @@index([type, createdAt])
  @@map("wallet_transactions_history")
}

model StudentWalletSepayOrder {
  id                     String                        @id @default(uuid())
  studentId              String                        @map("student_id")
  orderCode              String                        @unique @map("order_code")
  status                 StudentWalletSepayOrderStatus @default(pending)
  amountRequested        Int                           @map("amount_requested")
  amountReceived         Int?                          @map("amount_received")
  transferNote           String                        @map("transfer_note")
  parentEmail            String?                       @map("parent_email")
  sepayOrderId           String?                       @map("sepay_order_id")
  sepayOrderStatus       String?                       @map("sepay_order_status")
  sepayVaNumber          String?                       @map("sepay_va_number")
  sepayVaHolderName      String?                       @map("sepay_va_holder_name")
  sepayBankName          String?                       @map("sepay_bank_name")
  sepayAccountNumber     String?                       @map("sepay_account_number")
  sepayAccountHolderName String?                       @map("sepay_account_holder_name")
  sepayQrCode            String?                       @map("sepay_qr_code")
  sepayQrCodeUrl         String?                       @map("sepay_qr_code_url")
  sepayExpiredAt         DateTime?                     @map("sepay_expired_at") @db.Timestamptz(6)
  sepayTransactionId     String?                       @unique @map("sepay_transaction_id")
  sepayReferenceCode     String?                       @unique @map("sepay_reference_code")
  walletTransactionId    String?                       @unique @map("wallet_transaction_id")
  createdByUserId        String?                       @map("created_by_user_id")
  createdByUserEmail     String?                       @map("created_by_user_email")
  createdByRoleType      UserRole?                     @map("created_by_role_type")
  createdByStaffRoles    Json?                         @map("created_by_staff_roles")
  completedAt            DateTime?                     @map("completed_at") @db.Timestamptz(6)
  receiptEmailSentAt     DateTime?                     @map("receipt_email_sent_at") @db.Timestamptz(6)
  webhookPayload         Json?                         @map("webhook_payload")
  createdAt              DateTime                      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt              DateTime                      @updatedAt @map("updated_at") @db.Timestamptz(6)
  student                StudentInfo                   @relation(fields: [studentId], references: [id], onDelete: Cascade)
  walletTransaction      WalletTransactionsHistory?    @relation(fields: [walletTransactionId], references: [id], onDelete: SetNull)
  createdByUser          User?                         @relation("StudentWalletSepayOrdersCreatedBy", fields: [createdByUserId], references: [id], onDelete: SetNull)

  @@index([studentId])
  @@index([status, createdAt])
  @@index([createdByUserId])
  @@map("student_wallet_sepay_orders")
}

model StudentWalletDirectTopUpRequest {
  id                    String                                @id @default(uuid())
  studentId             String                                @map("student_id")
  amount                Int
  reason                String
  status                StudentWalletDirectTopUpRequestStatus @default(pending)
  tokenHash             String                                @unique @map("token_hash")
  expiresAt             DateTime                              @map("expires_at") @db.Timestamptz(6)
  approvedAt            DateTime?                             @map("approved_at") @db.Timestamptz(6)
  walletTransactionId   String?                               @unique @map("wallet_transaction_id")
  requestedByUserId     String?                               @map("requested_by_user_id")
  requestedByUserEmail  String?                               @map("requested_by_user_email")
  requestedByRoleType   UserRole?                             @map("requested_by_role_type")
  requestedByStaffRoles Json?                                 @map("requested_by_staff_roles")
  createdAt             DateTime                              @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt             DateTime                              @updatedAt @map("updated_at") @db.Timestamptz(6)
  student               StudentInfo                           @relation(fields: [studentId], references: [id], onDelete: Cascade)
  walletTransaction     WalletTransactionsHistory?            @relation(fields: [walletTransactionId], references: [id], onDelete: SetNull)
  requestedByUser       User?                                 @relation("StudentWalletDirectTopUpRequestsRequestedBy", fields: [requestedByUserId], references: [id], onDelete: SetNull)

  @@index([studentId])
  @@index([status, expiresAt])
  @@index([requestedByUserId])
  @@map("student_wallet_direct_topup_requests")
}

model CustomerCareService {
  id            String      @id @default(uuid())
  studentId     String      @unique @map("student_id")
  staffId       String      @map("staff_id")
  profitPercent Decimal?    @map("profit_percent") @db.Decimal(2, 2)
  staff         StaffInfo   @relation(fields: [staffId], references: [id], onDelete: Cascade)
  student       StudentInfo @relation(fields: [studentId], references: [id], onDelete: Cascade)

  @@index([studentId])
  @@index([staffId])
  @@map("customer_care_service")
}

model StaffMonthlyStat {
  id                   String    @id @default(uuid())
  staffId              String    @map("staff_id")
  month                String
  classesTotalMonth    Int?      @map("classes_total_month")
  classesTotalPaid     Int?      @map("classes_total_paid")
  classesTotalUnpaid   Int?      @map("classes_total_unpaid")
  workItemsTotalMonth  Int?      @map("work_items_total_month")
  workItemsTotalPaid   Int?      @map("work_items_total_paid")
  workItemsTotalUnpaid Int?      @map("work_items_total_unpaid")
  bonusesTotalMonth    Int?      @map("bonuses_total_month")
  bonusesTotalPaid     Int?      @map("bonuses_total_paid")
  bonusesTotalUnpaid   Int?      @map("bonuses_total_unpaid")
  totalMonthAll        Int?      @map("total_month_all")
  totalPaidAll         Int?      @map("total_paid_all")
  totalUnpaidAll       Int?      @map("total_unpaid_all")
  calculatedAt         DateTime? @map("calculated_at") @db.Timestamp(6)
  staff                StaffInfo @relation(fields: [staffId], references: [id], onDelete: Cascade)

  @@index([staffId])
  @@index([month])
  @@map("staff_monthly_stats")
}

model DashboardCache {
  cacheKey  String   @id @default(uuid()) @map("cache_key")
  cacheType String   @map("cache_type")
  data      Json
  expiresAt DateTime @map("expires_at") @db.Timestamp(6)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamp(6)

  @@index([expiresAt])
  @@map("dashboard_cache")
}

model CostExtend {
  id          String         @id @default(uuid())
  month       String?
  category    String?
  amount      Int?
  date        DateTime?      @map("date") @db.Date
  status      PaymentStatus? @default(pending)
  createdAt   DateTime       @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt   DateTime       @updatedAt @map("updated_at") @db.Timestamp(6)
  description String?

  @@index([date])
  @@index([month])
  @@index([status, date])
  @@map("cost_extend")
}

model ExtraAllowance {
  id                      String        @id @default(uuid())
  staffId                 String        @map("staff_id")
  amount                  Int           @default(0)
  status                  PaymentStatus @default(pending)
  note                    String?
  month                   String
  createdAt               DateTime      @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt               DateTime      @updatedAt @map("updated_at") @db.Timestamp(6)
  roleType                StaffRole     @default(teacher) @map("role_type")
  taxDeductionRatePercent Decimal       @default(0) @map("tax_deduction_rate_percent") @db.Decimal(5, 2)
  staff                   StaffInfo     @relation(fields: [staffId], references: [id], onDelete: Cascade)

  @@index([staffId])
  @@index([month])
  @@index([roleType])
  @@index([staffId, month, status])
  @@index([status, staffId, month, roleType, taxDeductionRatePercent], map: "extra_allowances_status_staff_month_role_tax_idx")
  @@map("extra_allowances")
}
