model User {
  id                                      String                            @id @default(uuid())
  email                                   String                            @unique
  phone                                   String?
  passwordHash                            String?                           @map("password_hash")
  roleType                                UserRole                          @map("role_type")
  province                                String?
  status                                  UserStatus                        @default(active)
  linkId                                  String?                           @map("link_id")
  accountHandle                           String                            @unique @map("account_handle")
  emailVerified                           Boolean                           @default(false) @map("email_verified")
  phoneVerified                           Boolean                           @default(false) @map("phone_verified")
  dataProcessingConsentAcceptedAt         DateTime?                         @map("data_processing_consent_accepted_at") @db.Timestamptz(6)
  dataProcessingConsentVersion            String?                           @map("data_processing_consent_version")
  refreshToken                            String?                           @map("refresh_token")
  avatarPath                              String?                           @map("avatar_path")
  createdAt                               DateTime                          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt                               DateTime                          @updatedAt @map("updated_at") @db.Timestamptz(6)
  first_name                              String?                           @db.VarChar
  last_name                               String?                           @db.VarChar
  actionHistories                         ActionHistory[]
  notificationReads                       NotificationRead[]
  notificationsCreated                    Notification[]                    @relation("NotificationCreatedBy")
  regulationsCreated                      Regulation[]                      @relation("RegulationCreatedBy")
  regulationsUpdated                      Regulation[]                      @relation("RegulationUpdatedBy")
  studentWalletSepayOrdersCreated         StudentWalletSepayOrder[]         @relation("StudentWalletSepayOrdersCreatedBy")
  studentWalletDirectTopUpRequestsCreated StudentWalletDirectTopUpRequest[] @relation("StudentWalletDirectTopUpRequestsRequestedBy")
  staffInfo                               StaffInfo?
  studentInfo                             StudentInfo?

  @@index([email])
  @@index([accountHandle])
  @@index([roleType])
  @@index([status])
  @@index([createdAt])
  @@map("users")
}
